--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/babel","next/core-web-vitals"],
+  "rules": {
+    "react/jsx-key":"off"
+  }
 }
