--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.0.0",
     "next": "14.2.14",
+    "next-auth": "^4.24.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind": "^4.0.0"
