--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
+    "mongoose": "^8.0.0",
     "next": "14.2.14",
+    "next-auth": "^4.24.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind": "^4.0.0",
-    "mongoose": "^8.0.0",
-    "next-auth": "^4.24.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
